--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <title>Clock</title>
-  <script src="js/lib/p5.min.js" type="text/javascript"></script>
-  <script src="js/main.js" type="text/javascript"></script>
+  <script src="assets/js/lib/p5.min.js" type="text/javascript"></script>
+  <script src="assets/js/main.js" type="text/javascript"></script>
   <style type="text/css">
   	body {
   		padding: 0;
