--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <title>Clock</title>
   <script src="assets/js/lib/p5.min.js" type="text/javascript"></script>
+  <script src="assets/js/lib/p5.dom.js" type="text/javascript"></script>
   <script src="assets/js/main.js" type="text/javascript"></script>
-  <style type="text/css">
-  	body {
-  		padding: 0;
-  		margin: 0;
-  		overflow: hidden; 
-  	}
-  </style>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 <body>
+  <main id="clockContainer"></main>
+  <footer>
+    Built with punctuality by
+    <a href="https://mbwatson.github.io/me" target="_blank">Matt Watson</a>.
+  </footer>
 </body>
 </html>
